  * New recursive-descent parser for RDoc::Markup.  See RDoc::Markup::Parser
  * New ri data format using Marshal, prebuilt caches, improved merging
  * No support for old ri data format, too hard to maintain

* N Minor Enhancements
  * API enhancements for writing parsers like the Ruby parser, see
    RDoc::Parser::RubyTools
  * Uses pager over less and more for Debian.  Ruby Bug #1171.
  * When rdoc is in debug mode, ^C now prints a backtrace
  * The ri data generator now supports ^T
  * C parser now handles Document-method better.  Bug #27329.
  * RDoc::Markup::AttributeManager no longer uses global state.
  * ri will use the RI_PAGER environment variable to find a pager.
  * RDoc::RDoc no longer passes around options.  Patch #27167.
  * Improved some wording for the RDoc main page.  Patch #27264, #27268.
  * Darkfish won't generate a file if its template is missing.  Patch #25857.

* N Bug Fixes
  * The :attr: directives now use the name given to create an attribute.  See
    RDoc::Parser::Ruby#parse_meta_attr.
  * Clean up circular require warnings on 1.9.
  * Fix crossrefs on paths with '-'.  Ruby Bug #883.
  * Fix ruby parser for alias with = in the name.  Bug #27522.
  * Images are no longer executable.  Bug #27156.
  * --op is no longer overridden by --ri.  Bug #27054.
  * :method: now works when at the end of a class.  Bug #26910.
  * Preserve elipsis from call-seq in Darkfish.  Patch #26974.
  * Emacs-style <tt>coding:</tt> is handled properly.  Patch #27388.
  * RubyLex now parses UTF-8 identifiers.  Bug #26946, #26947.
  * Fixed namespace lookup rules.  Bug #26161.
  * Worked around bug in Selenium where they hide a .jar in a .txt file.
    Filed Selenium bug #27789.
  * Alias comments are no longer hidden.  Reported by Adam Avilla.

=== 2.4.3 / 2009-04-01

* 2 Bug Fixes
  * Corrected patch for file links
  * Corrected display of file popup

=== 2.4.2 / 2009-03-25

* 2 Minor Enhancements
  * Added --pipe for turning RDoc on stdin into HTML